# auto_meeting

./: .gitignore  .mise.toml  README.md  do_list.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: auth.py  (+9 more)
backend/app/core/: config.py  exceptions.py  logging.py  observability.py  rate_limit.py  security.py
backend/app/db/: init_db.py  session.py
backend/app/models/: __init__.py  auth_session.py  enums.py  export_file.py  meeting.py  meeting_analysis.py  meeting_file.py  meeting_participant.py  meeting_series.py  meeting_transcript.py  meeting_visual_analysis.py  processing_job.py  project.py  timeline_memo.py  user.py
backend/app/queue/: jobs.py  redis.py  rq.py
backend/app/repositories/: auth_session_repository.py  export_repository.py  file_repository.py  meeting_repository.py  user_repository.py
backend/app/schemas/: auth.py  common.py  export.py  meeting.py  meeting_analysis.py  meeting_file.py  meeting_series.py  processing.py  project.py  timeline_memo.py  user.py
backend/app/services/: auth_service.py  export_service.py  file_service.py  meeting_service.py  permission_service.py  processing_service.py  search_service.py
backend/app/worker/: agent.py  frame_sampler.py  llm_client.py  openai_compatible.py  pipeline.py  result_writer.py  runner.py  stt_client.py  vlm_client.py
backend/tests/: test_api_flow.py
(+49 files in other folders)
