[project]
name = "company-brain-lite-backend"
version = "0.1.0"
description = "Company Brain Lite FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.17.0",
  "email-validator>=2.3.0",
  "fastapi>=0.124.0",
  "bcrypt==4.0.1",
  "passlib[bcrypt]>=1.7.4",
  "psycopg[binary]>=3.3.0",
  "pydantic-settings>=2.12.0",
  "python-jose[cryptography]>=3.5.0",
  "python-multipart>=0.0.20",
  "redis>=7.1.0",
  "reportlab>=4.4.0",
  "rq>=2.6.0",
  "sqlalchemy>=2.0.45",
  "uvicorn[standard]>=0.38.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=9.0.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.0",
]

[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
